--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -270,11 +270,11 @@
   margin-bottom: 0;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
-  border-radius: 15px !important;
+  border-radius: 0px !important;
   width: 100% !important;
 }
 .search-query {
-  background-color: #2f383d !important;
+  background-color: #596a73 !important;
   border-radius: 0px !important;
   padding: 5px 10px !important;
   border: 0 none !important;
