--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,18 +13,9 @@
     <%= render "layouts/shared/shim" %>
   </head>
   <body>
-    <div id="page-wrapper">
-      <div id="page-container" class="sidebar-partial sidebar-visible-lg sidebar-animations">
-        <%= render "layouts/sidebar" %>
-        <div id="main-container">
-          <%= render "layouts/header" %>
-          <div id="page-content">
-            <%= render "layouts/messages" %>
-            <%= yield %>
-          </div>
-          <%= render "layouts/shared/footer" %>
-        </div>
-      </div>
+    <%= render "layouts/sidebar" %>
+    <div class="container custom-container full-height">
+      <%= yield %>
     </div>
   </body>
 </html>
