fix layout show space

--- a/app/assets/stylesheets/space.scss
+++ b/app/assets/stylesheets/space.scss
@@ -76,3 +76,10 @@
 .space-content-form {
   margin-top: 40px;
 }
+.header-section h1 {
+  color: #00464f !important;
+  font-weight: bold !important;
+}
+.header-section h1, .line-break-block h4 {
+  color: #00464f !important;
+}
