--- a/app/views/search/spaces/index.html.erb
+++ b/app/views/search/spaces/index.html.erb
@@ -8,7 +8,7 @@
       <div id="map"></div>
     </div>
   </div>
-  <div class="col-md-6 max-height-x padding-left-0 padding-right-0" style="overflow-y: scroll;">
+  <div class="col-md-6 max-height-x padding-left-0 padding-right-0">
     <div class="block-full">
       <div class="widget">
         <%= form_tag search_spaces_path, method: :get, remote: true,
