--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -279,6 +279,7 @@
   padding: 5px 10px !important;
   border: 0 none !important;
   color: #ddd !important;
+  height: 50px !important;
 }
 .search-query::-webkit-input-placeholder {
   color: #ddd !important;
