--- a/app/views/search/spaces/show.html.erb
+++ b/app/views/search/spaces/show.html.erb
@@ -2,15 +2,15 @@
 <script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
 <script src='//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js' type='text/javascript'></script> <!-- only if you need custom infoboxes -->
 <%= javascript_include_tag "search/show_space.js" %>
-<div class="row">
-  <div class="col-md-6">
-    <div id="map-container">
+<div class="row full-height margin-left-0 margin-right-0">
+  <div class="col-md-6 max-height-x padding-left-0 padding-right-0">
+    <div id="map-container full-height">
       <div id="map"></div>
       <%= hidden_field_tag "mark_lat", @space.address.latitude %>
       <%= hidden_field_tag "mark_long", @space.address.longitude %>
     </div>
   </div>
-  <div class="col-md-6 show-page-space" id="search-space-result">
+  <div class="col-md-6 max-height-x padding-left-0 padding-right-0 scroll-y" id="search-space-result">
     <div class="block">
       <div class="content-header">
         <div class="header-section">
@@ -24,7 +24,7 @@
         <div class="carousel-inner">
           <% @space.images.each do |image| %>
             <div class="item <%= first_active @space.images, image %>">
-              <%= image_tag image.picture.url %>
+              <%= image_tag image.picture.url, class: "img-responsive"%>
             </div>
           <% end %>
         </div>
@@ -83,7 +83,8 @@
         </p>
         <p><%= @space.venue.description %></p>
         <p>
-          <h4 class="list-group-item-heading remove-margin"><i class="fa fa-bolt fa-fw"></i>
+          <h4 class="list-group-item-heading remove-margin">
+            <i class="fa fa-map-marker" aria-hidden="true"></i>
             <%= @space.address.details %>
           </h4>
         </p>
